--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -47,3 +47,31 @@ h3 {
   width: calc(3rem + 5vw);
   height: auto
 }
+@media (max-width: 991px) {
+  body{
+    font: 0.75rem/1.5 var(--bs-font-sans-serif);
+  }
+  label.btn {
+    font-size: inherit;
+    padding: 0.3rem 0.55rem;
+  }
+  .card-body, .card-header {
+    padding: 0.5rem 1rem;
+  }
+  h1 {
+    font-size: calc(1.5rem + 1.5vw);
+  }
+  h2 {
+    font-size: calc(1.25rem + 1.5vw);
+    margin-bottom: 0.25rem !important;
+  }
+  h3 {
+    font-size: calc(1rem + 1.5vw);
+  }
+  .mb-5 {
+    margin-bottom: 1.5rem !important;
+  }
+  .mb-4 {
+    margin-bottom: 0.75rem !important;
+  }
+}
