--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,35 +1,35 @@
 // Include functions first
-@import "bootstrap/scss/functions";
+@use "bootstrap/scss/functions";
 
 // Required
-@import "bootstrap/scss/variables";
-@import "bootstrap/scss/variables-dark";
-@import "bootstrap/scss/maps";
-@import "bootstrap/scss/mixins";
-@import "bootstrap/scss/utilities";
-@import "bootstrap/scss/root";
-@import "bootstrap/scss/reboot";
+@use "bootstrap/scss/variables";
+@use "bootstrap/scss/variables-dark";
+@use "bootstrap/scss/maps";
+@use "bootstrap/scss/mixins";
+@use "bootstrap/scss/utilities";
+@use "bootstrap/scss/root";
+@use "bootstrap/scss/reboot";
 
 //Var
-@import "bootstrap/scss/type";
-@import "bootstrap/scss/images";
-@import "bootstrap/scss/containers";
-@import "bootstrap/scss/grid";
-@import "bootstrap/scss/forms";
-@import "bootstrap/scss/buttons";
-@import "bootstrap/scss/transitions";
-@import "bootstrap/scss/button-group";
-@import "bootstrap/scss/card";
-@import "bootstrap/scss/list-group";
-@import "bootstrap/scss/modal"; // Requires transitions
-@import "bootstrap/scss/popover";
-@import "bootstrap/scss/offcanvas"; // Requires transitions
+@use "bootstrap/scss/type";
+@use "bootstrap/scss/images";
+@use "bootstrap/scss/containers";
+@use "bootstrap/scss/grid";
+@use "bootstrap/scss/forms";
+@use "bootstrap/scss/buttons";
+@use "bootstrap/scss/transitions";
+@use "bootstrap/scss/button-group";
+@use "bootstrap/scss/card";
+@use "bootstrap/scss/list-group";
+@use "bootstrap/scss/modal"; // Requires transitions
+@use "bootstrap/scss/popover";
+@use "bootstrap/scss/offcanvas"; // Requires transitions
 
 // Helpers
-// @import "bootstrap/scss/helpers";
+// @use "bootstrap/scss/helpers";
 
 // Utilities
-@import "bootstrap/scss/utilities/api";
+@use "bootstrap/scss/utilities/api";
 
 body {
   font: 1.5rem/1.5 var(--bs-font-sans-serif);
